--- a/source/_posts/负载均衡和高可用的区别.md
+++ b/source/_posts/负载均衡和高可用的区别.md
@@ -3,7 +3,7 @@ title: 负载均衡和高可用的区别
 date: 2019-10-01
 updated: 2019-10-01
 tags: [负载均衡,高可用]
-categories: [负载均衡,高可用]
+categories: [负载均衡]
 ---
 
 有些客户都会在询问的时候负载均衡和高可用，对于这二者的概念很混淆，下面TCloud带大家来区分下二者的区别。
