--- a/source/_posts/虚拟机的四种网络模型.md
+++ b/source/_posts/虚拟机的四种网络模型.md
@@ -3,7 +3,7 @@ title: 虚拟机的四种网络模型
 date: 2019-04-12
 updated: 2019-04-12
 tags: [Linux,虚拟化,网络]
-categories: [Linux,虚拟化]
+categories: [虚拟化]
 ---
 
 我们主要以 VirtualBox 和 VMwareWorkstation 这两款目前最主流的桌面虚拟化软件作为例。
